Global Solution Concluida

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,10 +1,63 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    
 }
+<div class="d-flex flex-column align-items-center vh-100">
+    <div class="col-md-9 mb-4" style="margin-bottom: 50px;">
+        <div class="card">
+            <div class="text-center">
+                <h1 class="display-4"><b>BLUE</b> HORIZON</h1>
+            </div>
+        </div>
 
-<div class="text-center">
-    <h1 class="display-4">Nome: @ViewBag.Name</h1>
-    <h1 class="display-4">Id: @ViewBag.Id</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+        <div style="margin-bottom: 50px;">
+            <div class="card">
+                <div class="text-left p-3">
+                    <h2>Contexto:</h2>
+                    <p style="direction: rtl; text-align: left;">
+                        As maiores cidades litorâneas são cidades portuárias e por causa dos portos o mar ao redor dessa cidades são muito poluídos usando o exemplo de Santos 4,5 km nas proximidades do porto a água não é boa o suficiente para ter vida marinha
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div style="margin-bottom: 50px;">
+            <div class="card">
+                <div class="text-left p-3">
+                    <h2>Solução:</h2>
+                    <p style="direction: rtl; text-align: left;">
+                        A solução consiste em uma inteligência artificial que analisa dados (PH, oxigenação da água, microplásticos e nutrientes) e define se a água está melhorando para suportar vida
+                    </p>
+                    <p style="direction: rtl; text-align: left;">
+                        Para incentivar a melhora, os portos vão, de acordo com medidor, pagar menos impostos com incentivos fiscais
+                    </p>
+                    <p style="direction: rtl; text-align: left;">
+                        Para conscientizar a população das mudanças feitas e de como a melhora das águas e o incentivo fiscal está afetando a vida deles será feito um aplicativo
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div style="margin-bottom: 50px;">
+            <div class="card">
+                <div class="text-left p-3">
+                    <h2>Consequência:</h2>
+                    <p style="direction: rtl; text-align: left;">
+                        As consequências variam de melhores preços ao consumidor final (pela baixa de impostos na importação) e incentivo ao turismo sustentável local, pois com a fauna marinha tratada isso atrairá pessoas de todos os lugares
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div style="margin-bottom: 50px;">
+            <div class="card">
+                <div class="text-left p-3">
+                    <h2>Quem Somos?</h2>
+                    <p> Lucas Monte Verde - RM551604 - 2TDSA</p>
+                    <p> Daniel Alves de Souza - RM552310 - 2TDSB</p>
+                    <p> Carlos Eduardo Guedes Alcoforado - RM94787 - 2TDSPV</p>
+                    <p> Luigi Exposito Uchiyama - RM99520 - 2TDSPG</p>
+                    <p> João Vito Santiago - RM86293 - 2TDSA</p>
+                </div>
+            </div>
+        </div>
+    </div>
