--- a/Views/User/LoginPage.cshtml
+++ b/Views/User/LoginPage.cshtml
@@ -5,7 +5,7 @@
 
     <div class="login-box">
         <div class="login-logo">
-            <a asp-controller="Home" asp-action="Index" style="color: white;"><b>Blue Horizon</b></a>
+            <a asp-controller="Home" asp-action="Index" style="color: white;"><b>Login</b></a>
         </div>
         <!-- /.login-logo -->
         <div class="card">
