--- a/Views/User/CadastroPage.cshtml
+++ b/Views/User/CadastroPage.cshtml
@@ -4,7 +4,7 @@
 
     <div class="register-box">
         <div class="register-logo">
-            <a style="color: white;"><b>Blue Horizon</b></a>
+            <a style="color: white;"><b>Cadastro</b></a>
         </div>
 
         <div class="card">
