--- a/Views/User/PerfilPage.cshtml
+++ b/Views/User/PerfilPage.cshtml
@@ -1,11 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
 }
 
 <!-- Main content -->
-<section class="content mt-3" >
+<section class="content mt-3">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
@@ -14,9 +11,7 @@
                 <div class="card card-primary card-outline">
                     <div class="card-body box-profile">
                         <div class="text-center">
-                            <img class="profile-user-img img-fluid img-circle"
-                                 src="@ViewBag.User.FotoUrl"
-                                 alt="User profile picture">
+                            <img class="profile-user-img img-fluid img-circle" src="@ViewBag.User.FotoUrl" alt="User profile picture">
                         </div>
 
                         <h3 class="profile-username text-center">@ViewBag.User.UserName</h3>
@@ -36,114 +31,129 @@
                     <!-- /.card-body -->
                 </div>
                 <!-- /.card -->
-                
-              
+
             </div>
             <!-- /.col -->
             <div class="col-md-9">
                 <div class="card">
                     <div class="card-header p-2">
                         <ul class="nav nav-pills">
-                            <li class="nav-item"><a class="nav-link active" href="#activity" data-toggle="tab">Activity</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="#activity" data-toggle="tab">Atividades Recentes</a></li>
                             <li class="nav-item"><a class="nav-link" href="#timeline" data-toggle="tab">Enviar Atualização</a></li>
                             <li class="nav-item"><a class="nav-link" href="#settings" data-toggle="tab">Editar Conta</a></li>
                         </ul>
-                    </div><!-- /.card-header -->
+                    </div>
+                    <!-- /.card-header -->
+                    
                     <div class="card-body">
                         <div class="tab-content">
                             <div class="active tab-pane" id="activity">
                                 <!-- Post -->
                                 <div class="post">
-                                    <div class="user-block">
-                                        <img class="img-circle img-bordered-sm" src="../../dist/img/user1-128x128.jpg" alt="user image">
-                                        <span class="username">
-                                            <a href="#">Jonathan Burke Jr.</a>
-                                            <a href="#" class="float-right btn-tool"><i class="fas fa-times"></i></a>
-                                        </span>
-                                        <span class="description">Shared publicly - 7:30 PM today</span>
-                                    </div>
-                                    <!-- /.user-block -->
-                                    <p>
-                                        Lorem ipsum represents a long-held tradition for designers,
-                                        typographers and the like. Some people hate it and argue for
-                                        its demise, but others ignore the hate as they create awesome
-                                        tools to help create filler text for everyone from bacon lovers
-                                        to Charlie Sheen fans.
-                                    </p>
+                                    @foreach (var i in ViewBag.getAtualizacao)
+                                    {
+                                        <div class="user-block">
+                                            <img class="img-circle img-bordered-sm" src="@ViewBag.User.FotoUrl" alt="user image">
+                                            <span class="username">
+                                                <a href="#">@ViewBag.User.UserName.</a>
+                                            </span>
 
-                                    <input class="form-control form-control-sm" type="text" placeholder="Type a comment">
-                                </div>
-                                <!-- /.post -->
-                                <!-- Post -->
-                                <div class="post clearfix">
-                                    <div class="user-block">
-                                        <img class="img-circle img-bordered-sm" src="../../dist/img/user7-128x128.jpg" alt="User Image">
-                                        <span class="username">
-                                            <a href="#">Sarah Ross</a>
-                                            <a href="#" class="float-right btn-tool"><i class="fas fa-times"></i></a>
-                                        </span>
-                                        <span class="description">Sent you a message - 3 days ago</span>
-                                    </div>
-                                    <!-- /.user-block -->
-                                    <p>
-                                        Lorem ipsum represents a long-held tradition for designers,
-                                        typographers and the like. Some people hate it and argue for
-                                        its demise, but others ignore the hate as they create awesome
-                                        tools to help create filler text for everyone from bacon lovers
-                                        to Charlie Sheen fans.
-                                    </p>
+                                        </div>
 
-                                </div>
-                                <!-- /.post -->
-                                <!-- Post -->
-                                <div class="post">
-                                    <div class="user-block">
-                                        <img class="img-circle img-bordered-sm" src="../../dist/img/user6-128x128.jpg" alt="User Image">
-                                        <span class="username">
-                                            <a href="#">Adam Jones</a>
-                                            <a href="#" class="float-right btn-tool"><i class="fas fa-times"></i></a>
-                                        </span>
-                                        <span class="description">Posted 5 photos - 5 days ago</span>
-                                    </div>
-                                    <!-- /.user-block -->
-                                    <div class="row mb-3">
-                                        <div class="col-sm-6">
-                                            <img class="img-fluid" src="../../dist/img/photo1.png" alt="Photo">
-                                        </div>
-                                        <!-- /.col -->
-                                        <div class="col-sm-6">
-                                            <div class="row">
-                                                <div class="col-sm-6">
-                                                    <img class="img-fluid mb-3" src="../../dist/img/photo2.png" alt="Photo">
-                                                    <img class="img-fluid" src="../../dist/img/photo3.jpg" alt="Photo">
-                                                </div>
-                                                <!-- /.col -->
-                                                <div class="col-sm-6">
-                                                    <img class="img-fluid mb-3" src="../../dist/img/photo4.jpg" alt="Photo">
-                                                    <img class="img-fluid" src="../../dist/img/photo1.png" alt="Photo">
-                                                </div>
-                                                <!-- /.col -->
-                                            </div>
-                                            <!-- /.row -->
-                                        </div>
-                                        <!-- /.col -->
-                                    </div>
-                                    <!-- /.row -->
+                                        <!-- /.user-block -->
+                                        <p>
+                                            <b>Atualização feita em @i.DataAtualizacao </b>
+                                        </p>
+                                        <p>
+                                            <b>Cidade:</b> @i.Cidade
+                                        </p>
+                                        <p>
+                                            <b>Porto:</b> @i.Porto
+                                        </p>
+                                        <p>
+                                            <b>pH:</b> @i.pH
+                                        </p>
+                                        <p>
+                                            <b>Oxigênio Dissolvido (mg/L):</b> @i.OxigenioDissolvido
+                                        </p>
+                                        <p>
+                                            <b>Nitrato (mg/L):</b>  @i.Nitrato
+                                        </p>
+                                        <p>
+                                            <b>Fosfato (mg/L):</b> @i.Fosfato
+                                        </p>
+                                        <p>
+                                            <b>Microplásticos (partículas/L):</b> @i.Microplasticos
+                                        </p>
+                                        <p>
+                                            <b>Salinidade (ppt):</b> @i.Salinidade
+                                        </p>
                                         
+                                    }
+
                                 </div>
                                 <!-- /.post -->
+                            
+                                
                             </div>
                             <!-- /.tab-pane -->
                             <div class="tab-pane" id="timeline">
-                                <!-- The timeline -->
-                                <div class="timeline timeline-inverse">
-                                    <!-- timeline time label -->
-                                    <div class="time-label">
-                                        <span class="bg-danger">
-                                            10 Feb. 2014
-                                        </span>
+                                <!-- Formulário de Enviar Atualização -->
+                                <form class="form-horizontal" asp-controller="Atualizacao" asp-action="EnviarAtualizacao">
+                                    <div class="form-group row">
+                                        <label for="cidade" class="col-sm-2 col-form-label">Cidade</label>
+                                        <div class="col-sm-10">
+                                            <input name="Cidade" type="text" class="form-control" id="cidade" placeholder="Cidade">
+                                        </div>
                                     </div>
-                                </div>
+                                    <div class="form-group row">
+                                        <label for="porto" class="col-sm-2 col-form-label">Porto</label>
+                                        <div class="col-sm-10">
+                                            <input name="Porto" type="text" class="form-control" id="porto" placeholder="Porto">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="ph" class="col-sm-2 col-form-label">pH</label>
+                                        <div class="col-sm-10">
+                                            <input name="pH" type="text" class="form-control" id="ph" placeholder="pH">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="oxigenioDissolvido" class="col-sm-2 col-form-label">Oxigênio Dissolvido</label>
+                                        <div class="col-sm-10">
+                                            <input name="OxigenioDissolvido" type="text" class="form-control" id="oxigenioDissolvido" placeholder="Oxigênio Dissolvido">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="nitrato" class="col-sm-2 col-form-label">Nitrato</label>
+                                        <div class="col-sm-10">
+                                            <input name="Nitrato" type="text" class="form-control" id="nitrato" placeholder="Nitrato">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="fosfato" class="col-sm-2 col-form-label">Fosfato</label>
+                                        <div class="col-sm-10">
+                                            <input name="Fosfato" type="text" class="form-control" id="fosfato" placeholder="Fosfato">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="microplasticos" class="col-sm-2 col-form-label">Microplásticos</label>
+                                        <div class="col-sm-10">
+                                            <input name="Microplasticos" type="text" class="form-control" id="microplasticos" placeholder="Microplásticos">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="salinidade" class="col-sm-2 col-form-label">Salinidade</label>
+                                        <div class="col-sm-10">
+                                            <input name="Salinidade" type="text" class="form-control" id="salinidade" placeholder="Salinidade">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="offset-sm-2 col-sm-10">
+                                            <button type="submit" class="btn btn-primary">Enviar Atualização</button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                             <!-- /.tab-pane -->
                             <div class="tab-pane" id="settings">
@@ -167,7 +177,7 @@
                                             <input name="NickName" type="text" class="form-control" id="inputName2" value="@ViewBag.User.NickName">
                                         </div>
                                     </div>
-                                    
+
                                     <div class="form-group row">
                                         <label for="inputSkills" class="col-sm-2 col-form-label">Foto de Perfil</label>
                                         <div class="col-sm-10">
@@ -181,3 +191,15 @@
                                     </div>
                                 </form>
                             </div>
+                            <!-- /.tab-pane -->
+                        </div>
+                        <!-- /.tab-content -->
+                    </div><!-- /.card-body -->
+                </div>
+                <!-- /.card -->
+            </div>
+            <!-- /.col -->
+        </div>
+        <!-- /.row -->
+    </div><!-- /.container-fluid -->
+</section>
