--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using GameForum
-@using GameForum.Models
+﻿@using BlueHorizon
+@using BlueHorizon.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
